--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
 
     <meta charset="UTF-8"/>
-    <link href="/imgs/punch.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/imgs/k.svg" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
